{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 136,
  "lineage": "b1bc5976-fc6b-91e0-8db1-97a6fd12a442",
  "resources": [
    {
      "module": "module.aws_database_route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e0437cf405be12bd",
            "owner_id": "270597536978",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "aws-test_dev_database"
            },
            "vpc_id": "vpc-083a3c106d18d5a79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:270597536978:internet-gateway/igw-0bc768f61a7aeeddf",
            "id": "igw-0bc768f61a7aeeddf",
            "owner_id": "270597536978",
            "tags": {
              "Name": "aws-test_dev_igw"
            },
            "vpc_id": "vpc-083a3c106d18d5a79"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_private_route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-068474cbe343747fb",
            "owner_id": "270597536978",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "aws-test_dev_private"
            },
            "vpc_id": "vpc-083a3c106d18d5a79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_public_route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0809509df75747a3c",
            "owner_id": "270597536978",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bc768f61a7aeeddf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aws-test_dev_public"
            },
            "vpc_id": "vpc-083a3c106d18d5a79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_internet_gateway",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0bc768f61a7aeeddf",
            "id": "r-rtb-0809509df75747a3c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0809509df75747a3c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_internet_gateway.aws_internet_gateway.main",
            "module.aws_public_route_table.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:270597536978:vpc/vpc-083a3c106d18d5a79",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0962be11a8d6a3048",
            "default_route_table_id": "rtb-050073704d602fd62",
            "default_security_group_id": "sg-0af4efed952bceec3",
            "dhcp_options_id": "dopt-0a88e1b46c8e13d2e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-083a3c106d18d5a79",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-050073704d602fd62",
            "owner_id": "270597536978",
            "tags": {
              "Name": "aws-test"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_database_subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01853290b125908c1",
            "route_table_id": "rtb-0e0437cf405be12bd",
            "subnet_id": "subnet-06632ae75fde83c34"
          },
          "dependencies": [
            "module.aws_database_route_table.aws_route_table.database",
            "module.vpc.aws_vpc.main",
            "module.vpc_database_subnets.aws_subnet.database"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f24cca7f241ce2e0",
            "route_table_id": "rtb-0e0437cf405be12bd",
            "subnet_id": "subnet-0d4b0eb71e5ffeed5"
          },
          "dependencies": [
            "module.aws_database_route_table.aws_route_table.database",
            "module.vpc.aws_vpc.main",
            "module.vpc_database_subnets.aws_subnet.database"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_database_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:270597536978:subnet/subnet-06632ae75fde83c34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.100.0/24",
            "id": "subnet-06632ae75fde83c34",
            "map_public_ip_on_launch": false,
            "owner_id": "270597536978",
            "tags": {
              "Name": "dev_database_subnets-0"
            },
            "vpc_id": "vpc-083a3c106d18d5a79"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:270597536978:subnet/subnet-0d4b0eb71e5ffeed5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.200.0/24",
            "id": "subnet-0d4b0eb71e5ffeed5",
            "map_public_ip_on_launch": false,
            "owner_id": "270597536978",
            "tags": {
              "Name": "dev_database_subnets-1"
            },
            "vpc_id": "vpc-083a3c106d18d5a79"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_private_subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5a608ca63979405",
            "route_table_id": "rtb-068474cbe343747fb",
            "subnet_id": "subnet-0957f68df6d4f1b5f"
          },
          "dependencies": [
            "module.aws_private_route_table.aws_route_table.private",
            "module.vpc.aws_vpc.main",
            "module.vpc_private_subnets.aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043484e1e9e273f9c",
            "route_table_id": "rtb-068474cbe343747fb",
            "subnet_id": "subnet-0fbe0a5325b27f4bd"
          },
          "dependencies": [
            "module.aws_private_route_table.aws_route_table.private",
            "module.vpc.aws_vpc.main",
            "module.vpc_private_subnets.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_private_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:270597536978:subnet/subnet-0957f68df6d4f1b5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-0957f68df6d4f1b5f",
            "map_public_ip_on_launch": false,
            "owner_id": "270597536978",
            "tags": {
              "Name": "dev_private_subnets-0"
            },
            "vpc_id": "vpc-083a3c106d18d5a79"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:270597536978:subnet/subnet-0fbe0a5325b27f4bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-0fbe0a5325b27f4bd",
            "map_public_ip_on_launch": false,
            "owner_id": "270597536978",
            "tags": {
              "Name": "dev_private_subnets-1"
            },
            "vpc_id": "vpc-083a3c106d18d5a79"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_public_subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e157f348fb005169",
            "route_table_id": "rtb-0809509df75747a3c",
            "subnet_id": "subnet-00c07ac34a771c587"
          },
          "dependencies": [
            "module.aws_public_route_table.aws_route_table.public",
            "module.vpc.aws_vpc.main",
            "module.vpc_public_subnets.aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036062478dfe5b6f7",
            "route_table_id": "rtb-0809509df75747a3c",
            "subnet_id": "subnet-03531a973a3f7e86b"
          },
          "dependencies": [
            "module.aws_public_route_table.aws_route_table.public",
            "module.vpc.aws_vpc.main",
            "module.vpc_public_subnets.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_public_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:270597536978:subnet/subnet-00c07ac34a771c587",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-00c07ac34a771c587",
            "map_public_ip_on_launch": false,
            "owner_id": "270597536978",
            "tags": {
              "Name": "dev_public_subnets-0"
            },
            "vpc_id": "vpc-083a3c106d18d5a79"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:270597536978:subnet/subnet-03531a973a3f7e86b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-03531a973a3f7e86b",
            "map_public_ip_on_launch": false,
            "owner_id": "270597536978",
            "tags": {
              "Name": "dev_public_subnets-1"
            },
            "vpc_id": "vpc-083a3c106d18d5a79"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}